--- a/services.html
+++ b/services.html
@@ -362,13 +362,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-4 col-sm-4 text-left">
-                <span
-                  >Copyright &copy; 2017.Company name All rights reserved.<a
-                    target="_blank"
-                    href="http://sc.chinaz.com/moban/"
-                    >&#x7F51;&#x9875;&#x6A21;&#x677F;</a
-                  ></span
-                >
+                <span>Copyright &copy; 2017.Company name All rights </span>
               </div>
               <div class="col-md-4 col-sm-4 text-center">
                 <span>
