--- a/index.html
+++ b/index.html
@@ -1101,7 +1101,7 @@
         <div class="footer-bottom">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4 col-sm-4 text-left "> <span>Copyright &copy; 2017.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></span> </div>
+                    <div class="col-md-4 col-sm-4 text-left "> <span>Copyright &copy; 2017.Company name All rights </span> </div>
 					<!---<div class="col-md-4 col-sm-4 text-center"> <span> Design With <i class="fa fa-heart text-primary heart"></i> By DexignZone </span> </div>
 					<div class="col-md-4 text-right "> <a href="#"> About</a> <a href="#"> Help Desk</a> <a href="#"> Privacy Policy</a> </div>--->
                 </div>
