--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
     </div>
     <div id="date">00月00日</div>
     <div id="timer">06:12</div>
-    <div class="zym"><span class="stars">✨</span> 越努力，越幸运！ 勤奋的让自己感动！<span class="stars">✨</span></div>
+    <div class="zym"><span class="stars">✨</span> 且夫水之积也不厚，则其负大舟也无力！<span class="stars">✨</span></div>
 
     <script>
         let showSymbl = true
